# fuckingfast-batch-download

./: .gitignore  .yamlfmt.yaml  README.md  build-chromium.ps1  build.ps1  pyproject.toml
.github/workflows/: build.yml
downloads/: .gitignore  batch.nu
fetch-links/: links.py
fetch-links/sites/: fitgirl.js
src/fuckingfast_batch_download/: __main__.py  config.py  exceptions.py  gui.py  log.py  scrap.py  scrape.py  utils.py
src/fuckingfast_batch_download/source/fitgirl/: __main__.py  gui.py
src/fuckingfast_batch_download/ui/: main_gui.py  scrap_gui.py
utils/: build-chromium.ps1  build-nuitka-chromium.ps1  build-nuitka.ps1  build-pyinstaller-chromium.ps1  build-pyinstaller.ps1  build.ps1  bundle.sh  with-chromium.sh
utils-linux/: build-nuitka-chromium.ps1  readme.md
