[project]
name = "fuckingfast-batch-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cli2gui>=2024.2",
    "freesimplegui>=5.1.1",
    "playwright>=1.47.0",
    "tqdm>=4.66.5",
    "xdialog>=1.2.0.1",
]
license = { text = "MIT" }

[project.scripts]
fuckingfast-extract = "fuckingfast_batch_download.__main__:main"
fitgirl-scrap = "fuckingfast_batch_download.source.fitgirl.__main__:_main"

[tool.uv]
dev-dependencies = []
