[project]
name = "fuckingfast-batch-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "cli2gui@git+https://github.com/FHPythonUtils/Cli2Gui.git@2025",
    "freesimplegui>=5.2.0.post1",
    "playwright>=1.51.0",
    "tqdm>=4.67.1",
    "xdialog>=1.2.0.1",
]
license = { text = "MIT" }

[project.scripts]
fuckingfast-extract = "fuckingfast_batch_download.__main__:main"
fitgirl-scrape = "fuckingfast_batch_download.source.fitgirl.__main__:_main"

fuckingfast-extract-gui = "fuckingfast_batch_download.ui.main_gui:gui"
fitgirl-scrape-gui = "fuckingfast_batch_download.ui.scrap_gui:gui"

[tool.uv]
package = true
dev-dependencies = ["fuckingfast-batch-download", "pyinstaller>=6.12.0"]

[tool.uv.sources]
fuckingfast-batch-download = { workspace = true }
cli2gui = { git = "https://github.com/FHPythonUtils/Cli2Gui.git" }
